# jukovsky_ros

./: CMakeLists.txt  package.xml
launch/: core.launch  dji_tst.launch  route.launch
msg/: juk_aruco_module_action.msg  juk_aruco_module_data.msg  juk_control_dji_msg.msg  juk_dji_camera_control_msg.msg  juk_dji_device_status_msg.msg  juk_dji_gps_msg.msg  juk_navigation_actions_msg.msg  juk_position_data_msg.msg  juk_set_target_data_msg.msg  reach_msg.msg
src/core/: CMakeLists.txt
src/core/EmlidPub/: CMakeLists.txt  EmlidPub.cpp  LinuxUART.cpp  LinuxUART.h  RegexEmlidReachParser.cpp  RegexEmlidReachParser.h
src/core/aruco_home_estimator/: CMakeLists.txt  aruco_home_estimator.cpp
src/core/dji_controller/: CMakeLists.txt  dji_controller.cpp
src/core/dji_controller/common/: dji_linux_environment.hpp  dji_linux_helpers.cpp
src/core/dji_controller/gimbal/: dji_gimbal.cpp  dji_gimbal.h
src/core/dji_controller_tst/: CMakeLists.txt  dji_controller_tst.cpp
src/core/dji_controller_tst/common/: dji_linux_environment.cpp  dji_linux_helpers.hpp
src/core/include/: ArgParser.cpp  ArgParser.h
src/core/logger/: CMakeLists.txt  logger.cpp  logger.h
src/core/navigation_control/: CMakeLists.txt  NavigationNode.cpp  NavigationNode.h  navigation_control.cpp
src/route_control/: CMakeLists.txt  route_control.cpp  server.h
